lib/tests/fixtures/compiler/parser/return_in_site.baseline
Error: return_in_site.pp:3:9: return statement cannot be used inside a site statement.
  return
  ^~~~~~
